# rewind

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
action/: README.md  action.yml
assets/: demo.cast  fix-demo.cast  generate_cast.py  record_demo.sh
crates/rewind-cli/: Cargo.toml
crates/rewind-otel/: Cargo.toml
crates/rewind-otel/src/: attributes.rs  export.rs  extract.rs  ingest.rs  lib.rs
crates/rewind-proxy/: Cargo.toml
crates/rewind-replay/: Cargo.toml
crates/rewind-store/: Cargo.toml
crates/rewind-tui/: Cargo.toml
crates/rewind-tui/src/: lib.rs
crates/rewind-web/: Cargo.toml
demo/: agent.py  direct_demo.py  e2e_demo.sh  mock_llm.py  record-demo.sh  record-fix-demo.sh  run_demo.sh  test_all_features.sh  test_real.py  test_streaming.py
docs/: cli-reference.md  cli-walkthrough.md  fix.md  getting-started.md  openai-agents-sdk.md  otel-export.md  otel-import.md  recording.md  runners.md  security-audit.md  sql-queries.md
examples/: 01_basic_recording.py  02_instant_replay.py  03_python_hooks.py  04_langgraph.py
python/: README.md  pyproject.toml  rewind_cli.py
python-mcp/: pyproject.toml  rewind_mcp_cli.py
python/rewind_agent/: __init__.py  _cli.py  (+13 more)
scripts/: repair-fork-step-numbering.py
site/: .gitignore  tailwind.config.mjs
tests/: adversarial_test.py
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+107 files in other folders)
