[package]
name = "rewind-otel"
version.workspace = true
edition.workspace = true

[dependencies]
rewind-store = { path = "../rewind-store" }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tonic = "0.14"
opentelemetry-proto = { workspace = true }
prost = "0.14"
flate2 = "1"
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
uuid = { workspace = true }
